--- a/samples/HybridApp/HybridApp.Android/HybridApp.Android.csproj
+++ b/samples/HybridApp/HybridApp.Android/HybridApp.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MyApplication.Droid</RootNamespace>
-    <AssemblyName>MyApplication.Android</AssemblyName>
+    <RootNamespace>HybridApp.Droid</RootNamespace>
+    <AssemblyName>HybridApp.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -90,22 +90,22 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BlazorDesktop.Android\BlazorDesktop.Android.csproj">
-      <Project>{4041365c-ec53-4d91-9d23-ea86b4778ff0}</Project>
-      <Name>BlazorDesktop.Android</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MyApplication\MyApplication.csproj">
-      <Project>{2C0BA59D-45E9-4610-B861-1E4D7FDB20BE}</Project>
-      <Name>MyApplication</Name>
-    </ProjectReference>
+    <AndroidEnvironment Include="environment.txt" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidEnvironment Include="environment.txt" />
+    <ProjectReference Include="..\..\..\src\Microsoft.MobileBlazorBindings.WebView.Android\Microsoft.MobileBlazorBindings.WebView.Android.csproj">
+      <Project>{4041365c-ec53-4d91-9d23-ea86b4778ff0}</Project>
+      <Name>Microsoft.MobileBlazorBindings.WebView.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HybridApp\HybridApp.csproj">
+      <Project>{de71f6d4-9950-472a-90b2-f4074810ae6d}</Project>
+      <Name>HybridApp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionMyApplicationAndroidHideInfoBar="True" />
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionHybridAppAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
