--- a/samples/HybridApp/HybridApp.iOS/Info.plist
+++ b/samples/HybridApp/HybridApp.iOS/Info.plist
@@ -23,7 +23,7 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>MyApplication</string>
+    <string>HybridApp</string>
     <key>CFBundleIdentifier</key>
     <string>com.companyname</string>
     <key>CFBundleVersion</key>
@@ -31,7 +31,7 @@
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>MyApplication</string>
+    <string>HybridApp</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
