--- a/samples/HybridApp/HybridApp.macOS/Info.plist
+++ b/samples/HybridApp/HybridApp.macOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>MyApplication</string>
+	<string>HybridApp</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.MyApplication.MyApplication</string>
+	<string>com.companyname.HybridApp.HybridApp</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
