--- a/src/Microsoft.MobileBlazorBindings.WebView.Android/Microsoft.MobileBlazorBindings.WebView.Android.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.Android/Microsoft.MobileBlazorBindings.WebView.Android.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivityResultCallbackRegistryHelper.cs" />
-    <Compile Include="BlazorDesktopAndroid.cs" />
+    <Compile Include="BlazorHybridAndroid.cs" />
     <Compile Include="FormsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebKitWebChromeClient.cs" />
