--- a/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BlazorDesktopIOS.cs" />
+    <Compile Include="BlazorHybridIOS.cs" />
     <Compile Include="WebViewExtendedWKWebViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
