Split MBB.WebView into Mobile Blazor-specific and other components
- MobileBlazorBindings.WebView contains Xamarin.Forms elements, can be used from XAML
- MobileBlazorBindings.Temp contains MobileBlazorBindings-specific components and will be merged into the main MobileBlazorBindings package

--- a/samples/HybridApp/HybridApp/HybridApp.csproj
+++ b/samples/HybridApp/HybridApp/HybridApp.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Microsoft.MobileBlazorBindings.WebView\Microsoft.MobileBlazorBindings.WebView.csproj" />
+    <ProjectReference Include="..\..\..\src\Microsoft.MobileBlazorBindings.Temp\Microsoft.MobileBlazorBindings.Temp.csproj" />
   </ItemGroup>
 
 </Project>
