--- a/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo.Android/MobileBlazorBindingsTodo.Android.csproj
+++ b/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo.Android/MobileBlazorBindingsTodo.Android.csproj
@@ -17,6 +17,7 @@
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <AndroidCommandLineToolsVersion>latest</AndroidCommandLineToolsVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
