Consolidate Temp project into MobileBlazorBindings
- Most projects should now use only Microsoft.MobileBlazorBindings
- All Mobile Blazor components are in the same namespace (and in the same package)
- Updated most package version dependencies to latest

--- a/src/Microsoft.MobileBlazorBindings/Microsoft.MobileBlazorBindings.csproj
+++ b/src/Microsoft.MobileBlazorBindings/Microsoft.MobileBlazorBindings.csproj
@@ -26,12 +26,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.MobileBlazorBindings.Core\Microsoft.MobileBlazorBindings.Core.csproj" />
+    <ProjectReference Include="..\Microsoft.MobileBlazorBindings.WebView\Microsoft.MobileBlazorBindings.WebView.csproj" />
   </ItemGroup>
 
   <ItemGroup>
