Code cleanup, fix warnings, etc.

--- a/samples/HybridApp/HybridApp.Windows/HybridApp.Windows.csproj
+++ b/samples/HybridApp/HybridApp.Windows/HybridApp.Windows.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <NoWarn>$(NoWarn);NU1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
