--- a/samples/HybridApp/HybridApp.iOS/HybridApp.iOS.csproj
+++ b/samples/HybridApp/HybridApp.iOS/HybridApp.iOS.csproj
@@ -137,4 +137,9 @@
       <Name>HybridApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadGenericExceptionInfoBarHybridAppiOSHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
