--- a/samples/HybridMessageApp/HybridMessageApp.Windows/HybridMessageApp.Windows.csproj
+++ b/samples/HybridMessageApp/HybridMessageApp.Windows/HybridMessageApp.Windows.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <NoWarn>$(NoWarn);NU1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
