--- a/src/Microsoft.MobileBlazorBindings.WebView.macOS/Microsoft.MobileBlazorBindings.WebView.macOS.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.macOS/Microsoft.MobileBlazorBindings.WebView.macOS.csproj
@@ -11,6 +11,8 @@
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
+    <!-- Don't strong-name sign this assembly because Xamarin.Forms is not strong-name signed -->
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
