--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -10,27 +10,27 @@ steps:
 
 # Note: 2019-12 Even though 'dotnet build' can build this, it's not compatible with MicroBuild Signing. Must use MSBuild.
 - task: MSBuild@1
-  displayName: 'Build src projects'
+  displayName: 'Build src Windows projects'
   inputs:
     msbuildArguments: /t:build /p:NoRestore=true
-    solution: |
-      src/**/*.csproj
-      !**/*.Android.csproj
-      !**/*.iOS.csproj
-      !**/*.macOS.csproj
+    solution: CI/CI.Windows.proj
     configuration: '$(BuildConfiguration)'
     arguments: /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/build.binlog"
 
 - task: MSBuild@1
-  displayName: 'Pack src projects'
+  displayName: 'Pack src Windows projects'
   inputs:
     msbuildArguments: /t:pack /p:NoBuild=true
-    solution: |
-      src/**/*.csproj
-      !**/*.Android.csproj
-      !**/*.iOS.csproj
-      !**/*.macOS.csproj
+    solution: CI/CI.Windows.proj
     configuration: '$(BuildConfiguration)'
+
+- task: MSBuild@1
+  displayName: 'Android'
+  inputs:
+    msbuildArguments: /t:build /p:NoRestore=true
+    solution: src/**/*.Android.csproj
+    configuration: '$(BuildConfiguration)'
+    arguments: /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/build.binlog"
 
 - task: MSBuild@1
   displayName: 'Prepare template project generated files'
