--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -24,7 +24,7 @@ steps:
     solution: CI/CI.Windows.proj
     configuration: '$(BuildConfiguration)'
 
-- task: MSBuild@1
+- task: XamarinAndroid@1
   displayName: 'Android'
   inputs:
     msbuildArguments: /t:build /p:NoRestore=true
