Update build commands for CI

--- a/azure-pipelines/dotnet-mac.yml
+++ b/azure-pipelines/dotnet-mac.yml
@@ -4,18 +4,16 @@ steps:
 - task: MSBuild@1
   displayName: 'Restore src Mac projects'
   inputs:
-    msbuildArguments: /t:restore
+    msbuildArguments: /t:restore /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/restore-mac.binlog"
     solution: CI/CI.Mac.proj
     configuration: '$(BuildConfiguration)'
-    arguments: /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/restore.binlog"
 
 - task: MSBuild@1
   displayName: 'Build src Mac projects'
   inputs:
-    msbuildArguments: /t:build /p:NoRestore=true
+    msbuildArguments: /t:build /p:NoRestore=true /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/build-mac.binlog"
     solution: CI/CI.Mac.proj
     configuration: '$(BuildConfiguration)'
-    arguments: /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/build.binlog"
 
 - task: MSBuild@1
   displayName: 'Pack src Mac projects'
