--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -45,15 +45,16 @@ jobs:
 #  - template: install-dependencies.yml
 #  - template: dotnet.yml
 
-- job: macOS
-  pool: ${{ parameters.macPool }}
-  steps:
-  - checkout: self
-    clean: true
-  - template: install-dependencies.yml
-    parameters:
-      initArgs: -NoRestore # Mac build restores its own projects so that Windows-only projects can be excluded
-  - template: dotnet-mac.yml
+# NOTE: This is disabled due to https://github.com/dotnet/Nerdbank.GitVersioning/issues/487
+# - job: macOS
+#   pool: ${{ parameters.macPool }}
+#   steps:
+#   - checkout: self
+#     clean: true
+#   - template: install-dependencies.yml
+#     parameters:
+#       initArgs: -NoRestore # Mac build restores its own projects so that Windows-only projects can be excluded
+#   - template: dotnet-mac.yml
 
 - job: WrapUp
   dependsOn:
