--- a/azure-pipelines/dotnet-mac.yml
+++ b/azure-pipelines/dotnet-mac.yml
@@ -4,14 +4,14 @@ steps:
 - task: MSBuild@1
   displayName: 'Restore src Mac projects'
   inputs:
-    msbuildArguments: /t:restore /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/restore-mac.binlog"
+    msbuildArguments: /t:restore
     solution: CI/CI.Mac.proj
     configuration: '$(BuildConfiguration)'
 
 - task: MSBuild@1
   displayName: 'Build src Mac projects'
   inputs:
-    msbuildArguments: /t:build /p:NoRestore=true /v:diag /bl:"$(Build.ArtifactStagingDirectory)/build_logs/build-mac.binlog"
+    msbuildArguments: /t:build /p:NoRestore=true
     solution: CI/CI.Mac.proj
     configuration: '$(BuildConfiguration)'
 
