--- a/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
+++ b/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
@@ -5,6 +5,8 @@
     <Title>Mobile Blazor Bindings Core Runtime (experimental)</Title>
     <Description>Common logic for using Blazor to target native renderers. For mobile app projects for Android and iOS use the Microsoft.MobileBlazorBindings package.</Description>
     <PackageTags>blazor;mobileblazorbindings</PackageTags>
+
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
