Use different Windows agent pool to build Android

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -1,5 +1,6 @@
 parameters:
   windowsPool: VSEng-MicroBuildVS2019
+  androidPool: windows-2019
   macPool: MicroBuildV2MacPool
 
 jobs:
@@ -35,6 +36,15 @@ jobs:
     displayName: Set build number
 
   - template: dotnet.yml
+
+
+- job: Android (on Windows)
+  pool: ${{ parameters.androidPool }}
+  steps:
+  - checkout: self
+    clean: true
+  - template: install-dependencies.yml
+  - template: dotnet-android.yml
 
 #- job: Linux
 #  pool:
